feat: creating default channels into brand creation
